# wasmpay

./: .gitignore  .tool-versions  Makefile  README.md  app.wadm.yaml  buf.gen.yaml  go.mod  go.sum  go.work  go.work.sum  local.wadm.yaml  package-lock.json  package.json  wadm.yaml
.github/workflows/: artifact-deploy.yml  artifacts.yaml  auto-deploy.yml  main.yaml
api-gateway/: .gitignore  Dockerfile  Makefile  README.md  application.yaml  go.mod  go.sum  http.go  main.go  new-transaction.sh  oauth.go  package-lock.json  secrets.sh  wasmcloud.toml
api-gateway/artifacts/: banking-demo.wasm
api-gateway/wasmcloud.banking/: .gitignore  (+3 more)
aws/: aws.go  go.mod
hack/: blaster.sh  scale.conf  scale.sh
icamer-validator/: README.md  build.sh  go.mod  go.sum  main.go  wadm.yaml  wasmcloud.toml
ledger/: Dockerfile  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  main.go
nordhaven-validator/: Cargo.toml  README.md  build.sh  composition.wasm  wasmcloud.toml
transaction-manager/: Cargo.toml  build.sh  wasmcloud.toml
untrusted-validator/: README.md  build.sh  go.mod  go.sum  main.go  wasmcloud.toml
wasmpay-messaging/: Cargo.toml  README.md  wasmcloud.toml  wasmpay_messaging.wasm
wasmpay-messaging/src/: lib.rs
wasmpay-messaging/wit/: world.wit
wasmpay-platform-harness/: Cargo.toml  README.md  wasmcloud.toml
wasmpay-platform-harness/src/: lib.rs
wasmpay-ui/: .prettierrc  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
wasmpay-validator/: Cargo.toml  README.md  build.sh  wac-install.sh  wadm.yaml  wasmcloud.toml
wit/: world.wit
(+166 files in other folders)
