[package]
name = "wasmpay-platform-harness"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
http = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
wasi = "=0.12.1"
wasmcloud-component = "0.2.0"
wit-bindgen = "0.41.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
